--- a/css/styles.css
+++ b/css/styles.css
@@ -517,7 +517,8 @@ Featured Tours
 
 .tour-img {
   height: 15rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .tour-date {
@@ -624,6 +625,22 @@ Contact
   border: transparent;
 }
 
+.form-control::-webkit-input-placeholder {
+  color: inherit;
+}
+
+.form-control::-moz-placeholder {
+  color: inherit;
+}
+
+.form-control:-ms-input-placeholder {
+  color: inherit;
+}
+
+.form-control::-ms-input-placeholder {
+  color: inherit;
+}
+
 .form-control::placeholder {
   color: inherit;
 }
@@ -684,7 +701,8 @@ Gallery
 
 .gallery-img {
   height: 17rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: var(--transition);
 }
 
